# zendoo-mc-cryptolib

./: .gitignore  .travis.yml  AUTHORS  BUILD.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: audit.toml
ci/: before_script.sh
ci/devtools/: run_locally.sh
ci/docker/: Dockerfile  entrypoint.sh
ci/tests/: 001-cargo-test.sh  002-examples.sh  003-mc_test-cert.sh  003-mc_test.sh  004-cargo-build-linux.sh  004-mc_test-cert-keyrot.sh  005-mc_test-csw.sh  007-cargo-build-windows.sh
circuit/: Cargo.toml
circuit/src/constants/: mod.rs
circuit/src/naive_threshold_sig/: mod.rs  tests.rs
examples/: Makefile  bin_SampleCalls  sampleCalls.cpp
include/: doctest.h  error.h  hex_utils.h  mcTestCall.h  zendoo_mc.h
librustzen/: Cargo.toml
librustzen/examples/: Makefile
librustzen/include/: librustzen.h
librustzen/src/: lib.rs
librustzen/src/generic_circuit/: mod.rs
librustzen/src/tests/: mod.rs
librustzen/test_files/: new_vk
mc_test/: Makefile  callFromMTFExample.py  getBtMrCall.cpp  mcTestCall.cpp  mcTestCallMain.cpp  test.sh
src/: ginger_calls.rs  lib.rs  macros.rs  mc_test_circuit.rs  type_mapping.rs  utils.rs
src/error/: mod.rs
src/mc_test_circuits/: cert.rs  csw.rs  mod.rs
src/tests/: mod.rs
src/tests/log/: sample_log_config.yaml
test_files/: sample_proof  sample_proof_no_bwt  sample_vk  sample_vk_no_bwt  test_mc_pk  test_mc_proof  test_mc_vk
