[package]
name = "zendoo-mc-crypto"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

[lib]
name = "zendoo_mc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
algebra = {git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.2.0"}
primitives = {features = ["merkle_tree"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.2.0"}
proof-systems = {features = ["groth16"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.2.0"}

r1cs-crypto = {git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.2.0", optional = true}
r1cs-core = {git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.2.0", optional = true}
r1cs-std = {git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.2.0", optional = true}

maybe-uninit = "=2.0.0"
rand = "0.7.3"
winapi = "=0.3.6"
lazy_static = "=1.2.0"
libc = "=0.2.70"
cfg-if = "= 0.1.2"

[features]
mc-test-circuit = ["r1cs-crypto", "r1cs-core", "r1cs-std"]

[profile.release]
#lto = true
#panic = 'abort'
codegen-units = 1
