[package]
name = "zendoo-mc-crypto"
version = "0.3.0"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Alberto Sala <alsala@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
]
edition = "2018"

[lib]
name = "zendoo_mc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
algebra = { features = ["tweedle"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.5.0" }
primitives = { features = ["tweedle", "merkle_tree"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.5.0" }
cctp_primitives = { git = "https://github.com/HorizenOfficial/zendoo-cctp-lib.git", branch = "release_0.2.0" }
proof-systems = { features = ["darlin"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.5.0", optional = true }
r1cs-crypto = { features = ["tweedle"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.5.0", optional = true }
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.5.0", optional = true}
r1cs-std = { features = ["tweedle"], git = "https://github.com/HorizenOfficial/ginger-lib.git", tag = "0.5.0", optional = true}
crossbeam-utils = "=0.8.7"
maybe-uninit = "=2.0.0"
rand = "0.8.4"
winapi = "0.3.9"
lazy_static = "=1.4.0"
libc = "=0.2.97"
cfg-if = "=1.0.0"
rayon = {version = "1" }

[features]
default = [ "parallel", "asm" ]
parallel = [ "algebra/parallel" ]
asm = [
    "algebra/llvm_asm",
    "primitives/llvm_asm",
    "cctp_primitives/asm",
    "proof-systems/llvm_asm",
    "r1cs-crypto/llvm_asm",
    "r1cs-std/llvm_asm"
]
mc-test-circuit = ["proof-systems", "r1cs-crypto", "r1cs-core", "r1cs-std"]

[profile.release]
#lto = true
panic = 'abort'
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

# Uncomment these lines for local development paths
#
#[patch.'https://github.com/HorizenOfficial/ginger-lib.git']
#algebra = { path = '../ginger-lib/algebra' }
#primitives = { path = '../ginger-lib/primitives' }
#r1cs-core = { path = '../ginger-lib/r1cs/core' }
#r1cs-crypto = { path = '../ginger-lib/r1cs/gadgets/crypto' }
#r1cs-std = { path = '../ginger-lib/r1cs/gadgets/std' }
#
#[patch.'https://github.com/HorizenOfficial/zendoo-cctp-lib.git']
#cctp_primitives = { path = '../zendoo-cctp-lib/cctp_primitives' }
#
#[patch.'https://github.com/HorizenLabs/marlin']
#marlin = { path = '../marlin' }
#
#[patch.'https://github.com/HorizenLabs/poly-commit']
#poly-commit = { path = '../poly-commit' }
